--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "discord.js": "^13.5.1",
         "dotenv": "^11.0.0",
         "eslint": "^8.6.0",
+        "glob": "^7.2.0",
         "mongoose": "^6.1.6",
         "prettier": "^2.5.1"
     }
